2003-05-31  Braden McDaniel  <braden@endoframe.com>

	Moved OpenVRML_::length and OpenVRML_::normalize to
	basetypes.cpp, which is the only place they were being used.

	* src/openvrml/OpenVRML/private.h (OpenVRML_::length,
	OpenVRML_::normalize):  Removed function definitions.
	* src/openvrml/OpenVRML/basetypes.cpp (length_, normalize_):
	Added function definitions.
	* src/openvrml/OpenVRML/VrmlFrustum.cpp (VrmlFrustum::update):
	Removed unnecessary using declaration.
	* src/openvrml/OpenVRML/bounding_volume.cpp
	(bounding_sphere::orthoTransform, bounding_sphere::transform):
	Removed unnecessary using declarations.

2003-05-31  Braden McDaniel  <braden@endoframe.com>

	Removed unused, unnecessary function viewer::get_user_navigation.

	* src/openvrml/OpenVRML/viewer.cpp:  Removed doc-comment for
	viewer::get_user_navigation.
	* src/openvrml/OpenVRML/viewer.h (viewer::get_user_navigation):
	Removed function declaration.
	* src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp
	(viewer::get_user_navigation):  Removed function definition.
	* src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.h
	(viewer::get_user_navigation):  Removed function declaration.

2003-05-31  Braden McDaniel  <braden@endoframe.com>

	Applied naming convention changes: Viewer -> viewer.

	* src/openvrml/OpenVRML/viewer.cpp:  Added.  Replaces
	Viewer.cpp.
	* src/openvrml/OpenVRML/viewer.h:  Added.  Replaces
	Viewer.h
	* src/openvrml/OpenVRML/Viewer.cpp:  Removed.
	* src/openvrml/OpenVRML/Viewer.h:  Removed.
	* src/openvrml/OpenVRML/Makefile.am:  Replaced Viewer.cpp,
	Viewer.h with viewer.cpp, viewer.h.
	* src/openvrml/OpenVRML/browser.cpp:  Changes associated with
	naming convention changes to viewer.
	* src/openvrml/OpenVRML/browser.h:  Changes associated with
	naming convention changes to viewer.
	* src/openvrml/OpenVRML/node.cpp:  Changes associated with
	naming convention changes to viewer.
	* src/openvrml/OpenVRML/node.h:  Changes associated with
	naming convention changes to viewer.